fixed the project name size and alignment

--- a/src/components/Body/Highlights/style.css
+++ b/src/components/Body/Highlights/style.css
@@ -18,7 +18,6 @@
   align-items: center;
   color: var(--background-color);
   height: 50%;
-  width: 80%;
   padding: 2em;
 }
 
