--- a/src/components/Body/Projects/style.css
+++ b/src/components/Body/Projects/style.css
@@ -66,6 +66,11 @@
   transform: scale(1.05);
 }
 
+.project_name {
+  font-size: 1.2em;
+  text-align: center;
+}
+
 .projects_list > div .text {
   /* border: 1px solid var(--accent-color); */
   /* box-shadow: 1px 1px 10px var(--accent-color); */
