--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -31,30 +31,24 @@
 
 .credit {
   text-align: center;
-  margin-top: 5%;
-  font-size: 1.2em;
+  margin-top: 40px;
+  font-size: 1.0em;
   color: rgb(202, 211, 211);
 }
 
 @media screen and (max-width: 1024px) {
-  .form {
-    width: fit-content;
-  }
-
   .button {
-    width: 40%;
+    width: 30%;
   }
 }
 
 input {
-  height: 4em;
   border-radius: 1em;
   padding: 1em;
   box-shadow: 1px 1px 5px rgb(139, 139, 139);
 }
 
 textarea {
-  grid-column: 1/3;
   height: 10em;
   border-radius: 1em;
   padding: 1em;
@@ -62,23 +56,7 @@ textarea {
 }
 
 @media screen and (max-width: 430px) {
-
   .button {
-    width: 30%;
+    height: 15%;
   }
-}
-
-input {
-  height: 2em;
-  border-radius: 1em;
-  padding: 1em;
-  box-shadow: 1px 1px 5px rgb(139, 139, 139);
-}
-
-textarea {
-  grid-column: 1/3;
-  height: 6em;
-  border-radius: 1em;
-  padding: 1em;
-  box-shadow: 1px 1px 5px rgb(139, 139, 139);
 }
